# ineed

./: Cargo.toml  LICENSE  README.md  build.rs
.github/workflows/: ci.yml
examples/: chaining.rs  custom_fmt.rs  custom_fmt_with_chaining.rs  custom_fmt_with_wrapper.rs  many_written.rs  password.rs  simple.rs
src/: format.rs  lib.rs  main.rs  promptables.rs
src/format/rules/: mod.rs  selected.rs  then.rs  written.rs
src/promptables/: bool.rs  formatted.rs  many_written.rs  map.rs  max_tries.rs  password.rs  selected.rs  separated.rs  then.rs  until.rs  written.rs
