[package]
name = "ineed"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rpassword = { version = "7.4.0", optional = true }
thiserror = "2.0.12"

[dev-dependencies]
anyhow = "1.0.98"

[build-dependencies]
rustc_version = "0.4.1"

[features]
default = []
rpassword = ["dep:rpassword"]

[package.metadata.docs.rs]
all-features = true
