[package]
name = "ineed"
version = "0.1.1"
edition = "2024"
authors = ["Ahmad Baalbaky <ahmadjfbky@gmail.com>"]
license = "MIT"
description = "CLI prompting library"
keywords = ["cli", "terminal", "utility", "tool"]
categories = ["command-line-utilities", "command-line-interface"]
exclude = ["target", "Cargo.lock"]
repository = "https://github.com/ahmadbky/ineed"
documentation = "https://docs.rs/ineed"

[lib]
name = "ineed"
path = "src/lib.rs"

[dependencies]
rpassword = { version = "7.4.0", optional = true }

[dev-dependencies]
anyhow = "1.0.98"

[build-dependencies]
rustc_version = "0.4.1"

[features]
default = []
rpassword = ["dep:rpassword"]

[package.metadata.docs.rs]
all-features = true
cargo-args = ["-Zunstable-options", "-Zrustdoc-scrape-examples"]
rustdoc-args = ["--generate-link-to-definition"]

[[example]]
name = "simple"
doc-scrape-examples = true
